--- a/src/plugins/i18n/locales/de.json
+++ b/src/plugins/i18n/locales/de.json
@@ -23,7 +23,7 @@
     "links": "Links"
   },
   "pages": {
-    "title": "Ping Dashboard",
+    "title": "AstroStake Dashboard",
     "title_all": "404",
     "tag": "Beta",
     "tag_all": "Seite nicht gefunden",
